--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCJ6P76MN0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LCJ6P76MN0');
+</script>
+
+
+
+
+
+
+
+  
   
   <!-- Meta Pixel Code -->
 <script>
@@ -19,6 +38,15 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=2049767712229569&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+
+
+
+
+
+
+
+
+  
   
   
   <meta charset="UTF-8">
@@ -696,4 +724,5 @@ src="https://www.facebook.com/tr?id=2049767712229569&ev=PageView&noscript=1"
   </script>
 </body>
 </html>
+
 
