--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5XVLMH2K');</script>
+<!-- End Google Tag Manager -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
   
   
   <!-- Meta Pixel Code -->
@@ -618,6 +655,18 @@ src="https://www.facebook.com/tr?id=2049767712229569&ev=PageView&noscript=1"
   </style>
 </head>
 <body>
+
+
+
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XVLMH2K"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
+
+
+  
   <section class="hero-section">
     <div class="hero-heading">
       <h2>Discover The Secret To Rapid Weight Loss</h2>
@@ -721,6 +770,7 @@ src="https://www.facebook.com/tr?id=2049767712229569&ev=PageView&noscript=1"
   </script>
 </body>
 </html>
+
 
 
 
