--- a/index.html
+++ b/index.html
@@ -653,15 +653,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section>
 
-  <section class="video-section">
-    <div class="video-container">
-      <h2>Watch How It Works</h2>
-      <div class="video-wrapper">
-        <iframe src="<iframe width="2314" height="1023" src="https://www.youtube.com/embed/FowVNGTVrHc?autoplay=1&mute=1&modestbranding=1&showinfo=0&rel=0&controls=1" title="Mitolyn Review 2025 – The Mitochondria Breakthrough That’s Changing Fat Loss Forever!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-      </div>
+<section class="video-section">
+  <div class="video-container">
+    <h2>Watch How It Works</h2>
+    <div class="video-wrapper">
+      <iframe width="2314" height="1023" src="https://www.youtube.com/embed/FowVNGTVrHc?autoplay=1&mute=1&modestbranding=1&showinfo=0&rel=0&controls=1" title="Mitolyn Review 2025 – The Mitochondria Breakthrough That’s Changing Fat Loss Forever!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <section class="testimonials-section">
     <h2 class="section-title">What Our Customers Say</h2>
@@ -715,6 +715,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </script>
 </body>
 </html>
+
 
 
 
